--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;0,800;0,900;1,800&display=swap');
+
+*{
+  font-family:  'Poppins', sans-serif;;
+}
+#root{
+  background-image: url('./assets/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+svg{
+  margin: 0 5px;
+}
 .App {
   text-align: center;
+  width: 900px;
+  max-width: 100%;
+    margin: 0 auto;
 }
+
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#love {
+  color: #fff;
+  width: 200px;
+  bottom: 24px;
+  margin: 100px auto;
+  display: flex;
+  text-transform: uppercase;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 14px;
+  text-transform: capitalize;
+  filter: drop-shadow(2px 4px 6px black);
 }
+  #love  a{
+      text-decoration: none;
+  }
+  #love  span#logo {
+      display: block;
+      background: linear-gradient(96.02deg, #0CDAC4 0.22%, #395DF0 31.45%, #FD49AD 71.02%, #FF845A 104.34%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      --WebkitTextFillColor: transparent;
+  }
+  #love  img{
+      width: 40px;
+  }
+
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +71,23 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loader {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid #c95fc1;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 20px auto;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
